[package]
name = "bpro"
version = "0.3.0"
license = "AGPL-3.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoraprime.ch>"]
description = "Rust bitcoin wallet library for professional use"
repository = "https://github.com/pandora-prime/bpro"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "wallet"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = [".github", "contrib"]

[dependencies]
amplify = "3.14.2"
lnpbp = "~0.9.0"
strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
bitcoin_scripts = "0.10.0-alpha.2"
descriptor-wallet = { version = "~0.10.0-alpha.2", git = "https://github.com/BP-WG/descriptor-wallet", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
bitcoin = "0.29.2"
miniscript = "9.0.1"
hwi = "0.6.0"
electrum-client = { version = "0.14.0", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
serde_yaml = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
chrono = "0.4.19"
clap = { version = "~3.2.23", optional = true, features = ["derive"] }

[features]
default = ["serde", "cli"]
all = ["serde", "cli", "electrum"]
electrum = ["electrum-client"]
cli = ["clap", "serde_yaml", "serde_json", "descriptor-wallet/electrum", "electrum"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
    "amplify/serde", "descriptor-wallet/serde", "bitcoin/serde"]

[patch.crates-io]
bitcoin_scripts = { git = "https://github.com/BP-WG/bp-foundation" }
bitcoin_blockchain = { git = "https://github.com/BP-WG/bp-foundation" }
descriptor-wallet = { git = "https://github.com/BP-WG/descriptor-wallet" }
