[package]
name = "bpro"
version = "0.4.0"
license = "AGPL-3.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoraprime.ch>"]
description = "Rust bitcoin wallet library for professional use"
repository = "https://github.com/pandora-prime/bpro"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "wallet"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2021"
rust-version = "1.66.0" # due to depencencies
exclude = [".github", "contrib"]

[dependencies]
amplify = "3.14.2"
lnpbp = "~0.9.0"
strict_encoding = { version = "~0.9.0", features = ["chrono", "bitcoin"] }
bitcoin_scripts = "0.10.0-alpha.2"
descriptor-wallet = { version = "~0.10.0-alpha.2", git = "https://github.com/BP-WG/descriptor-wallet", features = ["miniscript", "keygen", "hwi", "sign", "strict_encoding"] }
bitcoin = "0.29.2"
miniscript = "9.0.1"
hwi = "0.6.0"
electrum-client = { version = "0.14.0", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "2.3.2", features = ["hex"], optional = true }
chrono = "0.4.19"

[features]
default = ["serde"]
all = ["serde", "electrum"]
electrum = ["electrum-client"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "chrono/serde",
    "amplify/serde", "descriptor-wallet/serde", "bitcoin/serde"]

[patch.crates-io]
bitcoin_scripts = { git = "https://github.com/BP-WG/bp-foundation" }
bitcoin_blockchain = { git = "https://github.com/BP-WG/bp-foundation" }
descriptor-wallet = { git = "https://github.com/BP-WG/descriptor-wallet" }
